2012-07-09 Roman
- Archive: Double linking to an attribute of DAQ parameter is prevented. Restart archive for empty source is prevented.
- DAQ.LogicLev: Links init on object parameter copy is set.
- !:DAQ.Comedi: New module template is added for further implementation DAQ boards collection by library Comedy (http://www.comedi.org).
- DAQ.ICP_DAQ: Headers files ixisa.h and other added for further implementation ISA boards like DIO-144 from ICP_DAS.


2012-07-07 Roman
- DAQ: Archives creation and copying on parameter copy is added.
- Archive: Config properties "SrcMode" and "Source" copying pass is added, for prevent double connection to a single DAQ attribute.
    Config property "ArchS" update is moved direct to functions TVArchive::archivatorAttach() and TVArchive::archivatorDetach().


2012-07-06 Roman
- FIX:DAQ.System: SCSI disks ("sdXN") and MD (mirror device) processing is fixed for HDDStat and HDDSmart.


2012-07-05 Roman
- FIX:DAQ.System: Possible crash at inconsistency types size "unsigned int"(32) and scanf "%lu" (unsigned long, 64) on x86_64 is fixed.
    Speed value forming is fixed for counters wrap consider.
- SYS: Cycles lost counter is added to task statistic.


2012-07-03 Roman
- DAQ, DAQ.JavaLikeCalc, UI.QTCfg, UI.Vision: Attribute "font" is added to syntax highlight rules root node for set default font config.
    Default font for JavaLikeCalc programms is set to "Courier".
- FIX:LibsDB.vcaBase: DAQ parameters check is fixed for "Parameters selection dialog for graphics".


2012-07-01 Roman
- Archive: Data combining mode selection is added for combining data from the high resolution buffer to
    the low resolution archivator. Implemented combining modes: "Moving average", "Single", "Minimum", "Maximum".
    Combining mode "Moving average" has implemented for Boolean type by weight 0.5.


2012-06-29 Roman
- DAQ:Data active flag is added to a parameter and an attribute of DAQ by function dataActive().