@@ -1,5 +1,6 @@
 2012-07-09 Roman
 - Archive: Double linking to an attribute of DAQ parameter is prevented. Restart archive for empty source is prevented.
+- FIX:DAQ.LogicLev: String with spaces set for PublicConstant template's config fields fix.
 - DAQ.LogicLev: Links init on object parameter copy is set.
 - !:DAQ.Comedi: New module template is added for further implementation DAQ boards collection by library Comedy (http://www.comedi.org).
 - DAQ.ICP_DAQ: Headers files ixisa.h and other added for further implementation ISA boards like DIO-144 from ICP_DAS.
